Nice favicon; fixed spacing functions

--- a/irrelevant/timelinestyle.css
+++ b/irrelevant/timelinestyle.css
@@ -35,7 +35,7 @@ h2 {
 .timeline-both-side{
 background:black;
   float: left; 
-  width: 96%; 
+  width: 100%; 
 //  margin: 20px 2% 50px; 
 //  margin-top:2%;
   margin-bottom:2%;
